* Force encoding on Regexp for Ruby 1.9 to avoid encoding conflicts - Golubev Pavel
* Added lazy evaluation to message body: body is not parsed until need. It greatly improves performance with big mails if you don't need to read the body (yet)
* Added Mail.read_from_string as an explicit method (mcansky)

== Sat Sep 11 01:32:13 UTC 2010 Mikel Lindsaar <mikel@rubyx.com>

* Closed issue #58 - Content Type not parsing unless lower case.
* Version bump to 2.2.5.1

== Thu 17 Jun 2010 22:13:18 UTC Mikel Lindsaar <mikel@rubyx.com>

* Added Mail::POP3.delete_all, including specs (Martijn Storck)
* Lars Pind updates on header folding
* Version bump to 2.2.5

== Tue Jun  8 01:55:21 UTC 2010 Mikel Lindsaar <mikel@rubyx.com>

* Added inline attachment support to mail (mikel)

== Mon Jun  7 18:00:39 UTC 2010 Mikel Lindsaar <mikel@rubyx.com>

* Updating versioning so we only have one source, VERSION.yml (mikel)
* Changed activesupport dependency to 2.3.6 to fix #53, #64, and def #67. (Artem Titoulenko)
* Fixing typo in break_down_to.rb. (mikel)

== Mon Jun  7 18:07:16 UTC 2010 Mikel Lindsaar <mikel@rubyx.com>

* fixing a typo when generating docs. (Andrew Bloom)
* Changing \r\n\t to \r\n\s throughout mail (mikel)
* Handle multiple quoted words in Encodings.unquote_and_convert_to (Eric Kidd)
* Ruby 1.9: mark source encoding so it's usable with -Ks, -Ke, etc (Jeremy Kemper)
* Add #include? to mail body for convenience (Maxim Chernyak)
* Use Mail::TestMailer.deliveries in README example (John Trupiano)
* Allow bundler to automatically build a gem directly from git (Eric Kidd)

== Sun Apr 11 07:49:15 UTC 2010 Mikel Lindsaar <raasdnil@gmail.com>

* Lots of updates on encoding and decoding of headers and unstructured fields.  This
  is now a lot cleaner and nicer.  Also more predictable.
* Merged encoding branch back into head
* Version bump to 2.2.0
* Tagged 2.2.0

== Sun Apr  4 06:41:46 UTC 2010 Mikel Lindsaar <raasdnil@gmail.com>
